--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,15 @@
 iframe{
   z-index: -1;
 }
+.redText{
+  color: red;
+}
 
 /******************header******************/
 .logoImg {
-  
-  margin: 2.5% 0 0 10%;
+  width: 180px;
+  margin-left: 130px;
+  margin-top: 15px;
 }
 
 
@@ -19,9 +23,36 @@ iframe{
 .hide{
   display: none !important;
 }
-.sliderImg {
+
+#sliderContainer{
+  position: relative;
+  width: 90%;
+  margin: 2% 1% 2% 4%;
+}
+
+.bxslider{
+  display: flex;
+  height: 65%;
   width: 100%;
-  height: 100%;  
+}
+.slide{
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  width: 90% !important;
+  align-content: space-between;
+}
+.headerReview{
+  width: 20%;
+  margin: 5% auto 10% auto;
+}
+
+.textSlider{
+  font-family: 'Roboto', sans-serif;
+  color: darkgrey;
+  margin: 5% auto;
+  font-size: 1.8rem;
+  width: 35%;
 }
 
 .sliderButton{
@@ -37,24 +68,43 @@ iframe{
   display: none;
 }
 /******************button******************/
-.mainButton {
-  text-decoration: none;
-  position: absolute;
-  right:    0;
-  bottom:   0;
-  width: 80px;
-  height: 80px;
-  background-color: white;
-  margin: 0 5% 3% 0;
-  border-radius: 50%;
+.bottomRight{
   display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  bottom: 2%;
+  right: 0;
+  width: 350px;
 }
 
 .plusBtn {
-  color: red;
-  font-size: 3rem !important;
+  width: 55%;
+  margin-left: 8%;
+  margin-top: 5%;
 }
+.plusBtn:hover {
+ opacity: 0.1;
+}
+.reviewLogo {
+  width: 70%;
+  height: 70%;
+}
+#mainButton{
+  width: 60px;
+  height: 60px;
+  background-color: white;
+  border-radius: 50%;
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  margin-left: 10px;
 
+}
+.plusSign {
+  font-family: sans-serif;
+  color: red;
+  padding-bottom: 10px;
+  font-weight: 100;
+}
 
