--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
-
-
+.flex{
+  display: flex;
+}
+body{
+  background: #C41A09;
+}
 
 /*image*/
 iframe{
@@ -8,7 +12,10 @@ iframe{
 .redText{
   color: red;
 }
+.mainBody{
+  width: 80%;
 
+}
 /******************header******************/
 .logoImg {
   width: 180px;
@@ -19,15 +26,23 @@ iframe{
 
 
 /******************Slider*******************/
-
+.bx-viewport{
+  height: 800px !important;
+}
 .hide{
   display: none !important;
 }
 
+.backgroundImg{
+  margin: 1% auto;
+  width: 95%;
+}
 #sliderContainer{
   position: relative;
-  width: 90%;
+  width: 92%;
   margin: 2% 1% 2% 4%;
+  opacity: .95;
+
 }
 
 .bxslider{
@@ -39,20 +54,27 @@ iframe{
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  width: 90% !important;
+  width: 100% !important;
   align-content: space-between;
+  height: 800px;
 }
 .headerReview{
-  width: 20%;
+  width: 30%;
   margin: 5% auto 10% auto;
+}
+.sliderImg {
+  width: 25%;
+  margin: 0 auto;
 }
 
 .textSlider{
+  line-height: 1.8;
   font-family: 'Roboto', sans-serif;
-  color: darkgrey;
-  margin: 5% auto;
-  font-size: 1.8rem;
-  width: 35%;
+  color: #4d4d4d;
+  margin: 2% auto;
+  font-size: 125%;
+  width: 52%;
+  text-align: center;
 }
 
 .sliderButton{
@@ -62,6 +84,22 @@ iframe{
   right: 2%;
   position: absolute;
 }
+.xSign{
+  bottom: 25px;
+  right: 25px;
+  position: absolute;
+  width: 45px;
+  color: red;
+  font-size: 65px;
+  font-weight: 900;
+
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
 
 /*slide counter*/
 .bx-wrapper .bx-pager {
@@ -76,14 +114,7 @@ iframe{
   width: 350px;
 }
 
-.plusBtn {
-  width: 55%;
-  margin-left: 8%;
-  margin-top: 5%;
-}
-.plusBtn:hover {
- opacity: 0.1;
-}
+
 .reviewLogo {
   width: 70%;
   height: 70%;
@@ -106,5 +137,8 @@ iframe{
   color: red;
   padding-bottom: 10px;
   font-weight: 100;
+}
+.plusSign:hover {
+ opacity: 0.1;
 }
 
