--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ iframe{
   right: 2%;
   position: absolute;
 }
+
 .xSign{
   bottom: 25px;
   right: 25px;
@@ -105,7 +106,7 @@ iframe{
 /******************button******************/
 .bottomRight{
   display: flex;
-  position: absolute;
+  position: fixed;
   bottom: 2%;
   right: 0;
   width: 350px;
@@ -139,3 +140,14 @@ iframe{
  opacity: 0.1;
 }
 
+
+
+@media (max-width: 1300px) { 
+  .fullDisplay{
+    height: 900px !important;
+  }
+  .bx-viewport {
+    height: 700px;
+  }
+
+}
